[gd_scene load_steps=8 format=2]

[ext_resource path="res://physicsAssets/atom_O.svg" type="Texture" id=1]
[ext_resource path="res://physicsAssets/molecule.tres" type="PhysicsMaterial" id=2]
[ext_resource path="res://scripts/main/atom_O.gd" type="Script" id=3]
[ext_resource path="res://scripts/main/dragarea.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 88.1356

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 33, 26.5 )

[node name="atom_O" type="RigidBody2D"]
z_index = 2
physics_material_override = ExtResource( 2 )
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.295, 0.295 )
shape = SubResource( 2 )

[node name="circle" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )

[node name="area_l" type="Area2D" parent="."]
position = Vector2( -23, 17 )

[node name="vacancy_l" type="CollisionShape2D" parent="area_l"]
shape = SubResource( 3 )

[node name="area_r" type="Area2D" parent="."]
position = Vector2( 23, 17 )

[node name="vacancy_r" type="CollisionShape2D" parent="area_r"]
shape = SubResource( 3 )

[node name="dragarea" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.101961 )
monitoring = false
monitorable = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dragarea"]
visible = false
position = Vector2( 0, 0.5 )
z_index = 1
shape = SubResource( 4 )

[connection signal="body_entered" from="area_l" to="." method="allInOneEntered" binds= [ 0 ]]
[connection signal="body_entered" from="area_r" to="." method="allInOneEntered" binds= [ 1 ]]
[connection signal="input_event" from="dragarea" to="dragarea" method="_on_areadrag_input_event"]
